; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_value_deep_copy.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_value_deep_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JSONFailure = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @json_value_deep_copy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 0, i64* %4, align 8
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  store i8* null, i8** %8, align 8
  store i8* null, i8** %9, align 8
  store i8* null, i8** %10, align 8
  store i32* null, i32** %11, align 8
  store i32* null, i32** %12, align 8
  store i32* null, i32** %13, align 8
  store i32* null, i32** %14, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @json_value_get_type(i32* %15)
  switch i32 %16, label %140 [
    i32 135, label %17
    i32 129, label %60
    i32 134, label %107
    i32 130, label %111
    i32 128, label %115
    i32 131, label %137
    i32 133, label %139
  ]

17:                                               ; preds = %1
  %18 = load i32*, i32** %3, align 8
  %19 = call i32* @json_value_get_array(i32* %18)
  store i32* %19, i32** %11, align 8
  %20 = call i32* (...) @json_value_init_array()
  store i32* %20, i32** %5, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i32* null, i32** %2, align 8
  br label %141

24:                                               ; preds = %17
  %25 = load i32*, i32** %5, align 8
  %26 = call i32* @json_value_get_array(i32* %25)
  store i32* %26, i32** %12, align 8
  store i64 0, i64* %4, align 8
  br label %27

27:                                               ; preds = %55, %24
  %28 = load i64, i64* %4, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = call i64 @json_array_get_count(i32* %29)
  %31 = icmp ult i64 %28, %30
  br i1 %31, label %32, label %58

32:                                               ; preds = %27
  %33 = load i32*, i32** %11, align 8
  %34 = load i64, i64* %4, align 8
  %35 = call i32* @json_array_get_value(i32* %33, i64 %34)
  store i32* %35, i32** %7, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = call i32* @json_value_deep_copy(i32* %36)
  store i32* %37, i32** %6, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = icmp eq i32* %38, null
  br i1 %39, label %40, label %43

40:                                               ; preds = %32
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 @json_value_free(i32* %41)
  store i32* null, i32** %2, align 8
  br label %141

43:                                               ; preds = %32
  %44 = load i32*, i32** %12, align 8
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @json_array_add(i32* %44, i32* %45)
  %47 = load i32, i32* @JSONFailure, align 4
  %48 = icmp eq i32 %46, %47
  br i1 %48, label %49, label %54

49:                                               ; preds = %43
  %50 = load i32*, i32** %5, align 8
  %51 = call i32 @json_value_free(i32* %50)
  %52 = load i32*, i32** %6, align 8
  %53 = call i32 @json_value_free(i32* %52)
  store i32* null, i32** %2, align 8
  br label %141

54:                                               ; preds = %43
  br label %55

55:                                               ; preds = %54
  %56 = load i64, i64* %4, align 8
  %57 = add i64 %56, 1
  store i64 %57, i64* %4, align 8
  br label %27

58:                                               ; preds = %27
  %59 = load i32*, i32** %5, align 8
  store i32* %59, i32** %2, align 8
  br label %141

60:                                               ; preds = %1
  %61 = load i32*, i32** %3, align 8
  %62 = call i32* @json_value_get_object(i32* %61)
  store i32* %62, i32** %13, align 8
  %63 = call i32* (...) @json_value_init_object()
  store i32* %63, i32** %5, align 8
  %64 = load i32*, i32** %5, align 8
  %65 = icmp eq i32* %64, null
  br i1 %65, label %66, label %67

66:                                               ; preds = %60
  store i32* null, i32** %2, align 8
  br label %141

67:                                               ; preds = %60
  %68 = load i32*, i32** %5, align 8
  %69 = call i32* @json_value_get_object(i32* %68)
  store i32* %69, i32** %14, align 8
  store i64 0, i64* %4, align 8
  br label %70

70:                                               ; preds = %102, %67
  %71 = load i64, i64* %4, align 8
  %72 = load i32*, i32** %13, align 8
  %73 = call i64 @json_object_get_count(i32* %72)
  %74 = icmp ult i64 %71, %73
  br i1 %74, label %75, label %105

75:                                               ; preds = %70
  %76 = load i32*, i32** %13, align 8
  %77 = load i64, i64* %4, align 8
  %78 = call i8* @json_object_get_name(i32* %76, i64 %77)
  store i8* %78, i8** %9, align 8
  %79 = load i32*, i32** %13, align 8
  %80 = load i8*, i8** %9, align 8
  %81 = call i32* @json_object_get_value(i32* %79, i8* %80)
  store i32* %81, i32** %7, align 8
  %82 = load i32*, i32** %7, align 8
  %83 = call i32* @json_value_deep_copy(i32* %82)
  store i32* %83, i32** %6, align 8
  %84 = load i32*, i32** %6, align 8
  %85 = icmp eq i32* %84, null
  br i1 %85, label %86, label %89

86:                                               ; preds = %75
  %87 = load i32*, i32** %5, align 8
  %88 = call i32 @json_value_free(i32* %87)
  store i32* null, i32** %2, align 8
  br label %141

89:                                               ; preds = %75
  %90 = load i32*, i32** %14, align 8
  %91 = load i8*, i8** %9, align 8
  %92 = load i32*, i32** %6, align 8
  %93 = call i32 @json_object_add(i32* %90, i8* %91, i32* %92)
  %94 = load i32, i32* @JSONFailure, align 4
  %95 = icmp eq i32 %93, %94
  br i1 %95, label %96, label %101

96:                                               ; preds = %89
  %97 = load i32*, i32** %5, align 8
  %98 = call i32 @json_value_free(i32* %97)
  %99 = load i32*, i32** %6, align 8
  %100 = call i32 @json_value_free(i32* %99)
  store i32* null, i32** %2, align 8
  br label %141

101:                                              ; preds = %89
  br label %102

102:                                              ; preds = %101
  %103 = load i64, i64* %4, align 8
  %104 = add i64 %103, 1
  store i64 %104, i64* %4, align 8
  br label %70

105:                                              ; preds = %70
  %106 = load i32*, i32** %5, align 8
  store i32* %106, i32** %2, align 8
  br label %141

107:                                              ; preds = %1
  %108 = load i32*, i32** %3, align 8
  %109 = call i32 @json_value_get_boolean(i32* %108)
  %110 = call i32* @json_value_init_boolean(i32 %109)
  store i32* %110, i32** %2, align 8
  br label %141

111:                                              ; preds = %1
  %112 = load i32*, i32** %3, align 8
  %113 = call i32 @json_value_get_number(i32* %112)
  %114 = call i32* @json_value_init_number(i32 %113)
  store i32* %114, i32** %2, align 8
  br label %141

115:                                              ; preds = %1
  %116 = load i32*, i32** %3, align 8
  %117 = call i8* @json_value_get_string(i32* %116)
  store i8* %117, i8** %8, align 8
  %118 = load i8*, i8** %8, align 8
  %119 = icmp eq i8* %118, null
  br i1 %119, label %120, label %121

120:                                              ; preds = %115
  store i32* null, i32** %2, align 8
  br label %141

121:                                              ; preds = %115
  %122 = load i8*, i8** %8, align 8
  %123 = call i8* @parson_strdup(i8* %122)
  store i8* %123, i8** %10, align 8
  %124 = load i8*, i8** %10, align 8
  %125 = icmp eq i8* %124, null
  br i1 %125, label %126, label %127

126:                                              ; preds = %121
  store i32* null, i32** %2, align 8
  br label %141

127:                                              ; preds = %121
  %128 = load i8*, i8** %10, align 8
  %129 = call i32* @json_value_init_string_no_copy(i8* %128)
  store i32* %129, i32** %5, align 8
  %130 = load i32*, i32** %5, align 8
  %131 = icmp eq i32* %130, null
  br i1 %131, label %132, label %135

132:                                              ; preds = %127
  %133 = load i8*, i8** %10, align 8
  %134 = call i32 @parson_free(i8* %133)
  br label %135

135:                                              ; preds = %132, %127
  %136 = load i32*, i32** %5, align 8
  store i32* %136, i32** %2, align 8
  br label %141

137:                                              ; preds = %1
  %138 = call i32* (...) @json_value_init_null()
  store i32* %138, i32** %2, align 8
  br label %141

139:                                              ; preds = %1
  store i32* null, i32** %2, align 8
  br label %141

140:                                              ; preds = %1
  store i32* null, i32** %2, align 8
  br label %141

141:                                              ; preds = %140, %139, %137, %135, %126, %120, %111, %107, %105, %96, %86, %66, %58, %49, %40, %23
  %142 = load i32*, i32** %2, align 8
  ret i32* %142
}

declare dso_local i32 @json_value_get_type(i32*) #1

declare dso_local i32* @json_value_get_array(i32*) #1

declare dso_local i32* @json_value_init_array(...) #1

declare dso_local i64 @json_array_get_count(i32*) #1

declare dso_local i32* @json_array_get_value(i32*, i64) #1

declare dso_local i32 @json_value_free(i32*) #1

declare dso_local i32 @json_array_add(i32*, i32*) #1

declare dso_local i32* @json_value_get_object(i32*) #1

declare dso_local i32* @json_value_init_object(...) #1

declare dso_local i64 @json_object_get_count(i32*) #1

declare dso_local i8* @json_object_get_name(i32*, i64) #1

declare dso_local i32* @json_object_get_value(i32*, i8*) #1

declare dso_local i32 @json_object_add(i32*, i8*, i32*) #1

declare dso_local i32* @json_value_init_boolean(i32) #1

declare dso_local i32 @json_value_get_boolean(i32*) #1

declare dso_local i32* @json_value_init_number(i32) #1

declare dso_local i32 @json_value_get_number(i32*) #1

declare dso_local i8* @json_value_get_string(i32*) #1

declare dso_local i8* @parson_strdup(i8*) #1

declare dso_local i32* @json_value_init_string_no_copy(i8*) #1

declare dso_local i32 @parson_free(i8*) #1

declare dso_local i32* @json_value_init_null(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
